syntax = "proto3";

package aldebaran;
option go_package = "github.com/Finciero/opendata/taurus/aldebaran";

service Service {
  rpc CreateToken (Request) returns (Response);
}

message Request {
  string email = 1;
  string Password = 2;
  string client_token = 3;
}

message Response {
  int32 status_code = 1;
  string message = 2;
  string token = 3;
}
